src/objects/OI_Entry_Record__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Consent_To_Data_Sharing__c</fullName>
        <description>Y or N</description>
        <label>Consent To Data Sharing</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Account_Holders__c</fullName>
        <label>Number of Account Holders</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OI_Account_Number__c</fullName>
        <label>OI_Account_Number</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Account_Type__c</fullName>
        <label>OI_Account_Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Address_Line1__c</fullName>
        <label>OI_Address_Line1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Address_Line2__c</fullName>
        <label>OI_Address_Line2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Address_Line3__c</fullName>
        <label>OI_Address_Line3</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Birth_Date__c</fullName>
        <label>OI_Birth_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OI_Date_of_Application__c</fullName>
        <label>OI Date of Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OI_Declared_Salary__c</fullName>
        <label>OI_Declared_Salary</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OI_Forename__c</fullName>
        <label>OI_Forename</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Other_Name__c</fullName>
        <label>OI_Other_Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Postcode__c</fullName>
        <label>OI_Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Salary_Verified__c</fullName>
        <description>Y or N</description>
        <label>OI Salary Verified</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Suffix__c</fullName>
        <label>OI_Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Surname__c</fullName>
        <label>OI_Surname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OI_Title__c</fullName>
        <label>OI_Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Address_2__c</fullName>
        <label>Previous Address 2</label>
        <length>168</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Address__c</fullName>
        <label>Previous Address 1</label>
        <length>168</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary_Net_Gross__c</fullName>
        <description>N = Monthly Net , G = Annual Gross</description>
        <label>Salary (Net/Gross)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>OI Entry Record</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OI Entry Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>